--- a/notebooks/Simple stan.ipynb
+++ b/notebooks/Simple stan.ipynb
@@ -60,11 +60,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "true_gamma = 2.5\n",
-    "true_Mbh = 4E6 # Msun"
+    "n_data = 512\n",
+    "Mbh = 4E6\n",
+    "gamma = 3.5\n",
+    "a = 2. # mpc\n",
+    "b = 1000. # mpc = 1 pc"
    ]
   },
   {
@@ -75,127 +80,7 @@
    },
    "outputs": [],
    "source": [
-    "def potential(r, Mbh):\n",
-    "    return G*Mbh / r\n",
-    "\n",
-    "def rv_to_E(r, v, Mbh):\n",
-    "    return -0.5*v**2 + potential(r, Mbh)\n",
-    "\n",
-    "def v_c(r, Mbh):\n",
-    "    return np.sqrt(G * Mbh / r)\n",
-    "\n",
-    "def log_df(E, Mbh, g):\n",
-    "    E = np.atleast_1d(E)\n",
-    "    term1 = (g - 3/2.)*np.log(E) - 0.5*np.log(8*np.pi**3) - g*np.log(G * Mbh)\n",
-    "    term2 = loggamma(g + 1) - loggamma(g - 0.5)\n",
-    "    res = term1 + term2\n",
-    "    res[E <= 0] = -np.inf\n",
-    "    return res.real"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "from math import log, exp\n",
-    "import emcee\n",
-    "\n",
-    "def log_f(p, Mbh, gamma):\n",
-    "    log_r, log_v = p\n",
-    "    r = exp(log_r)\n",
-    "    v = exp(log_v)\n",
-    "    E = -0.5*v**2 + G*Mbh/r\n",
-    "    \n",
-    "    if E < 0 or log_r > 5 or log_r < -6:\n",
-    "        return -np.inf\n",
-    "    \n",
-    "    return (gamma - 1.5)*log(E) + log(r) + log(v) # + 2*log(r) + 2*log(v)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sampler = emcee.EnsembleSampler(32, 2, log_f, args=(true_Mbh, true_gamma))\n",
-    "p0 = np.log(np.random.uniform(0, 1, size=(32, 2)))\n",
-    "assert np.all(np.isfinite([log_f(p0[i], true_Mbh, true_gamma) \n",
-    "                           for i in range(len(p0))]))\n",
-    "\n",
-    "pos,_,_ = sampler.run_mcmc(p0, 4000)\n",
-    "sampler.reset()\n",
-    "_ = sampler.run_mcmc(p0, 4000)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for dim in range(sampler.chain.shape[-1]):\n",
-    "    plt.figure()\n",
-    "    for walker in sampler.chain[...,dim]:\n",
-    "        plt.plot(walker, marker='', drawstyle='steps-mid', alpha=0.25)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "true_r, true_v = np.exp(np.vstack(sampler.chain[:,::64])).T"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.hist(rv_to_E(true_r, true_v, true_Mbh), bins=np.logspace(-1, 4, 32));\n",
-    "plt.xscale('log')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "(true_r.min()*u.mpc).to(u.au)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "(true_v.max()*u.mpc/u.yr).to(u.km/u.s)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig,axes = plt.subplots(1, 2, figsize=(10,5))\n",
-    "\n",
-    "axes[0].hist(true_r, bins=np.logspace(-3, 1, 32));\n",
-    "axes[0].set_xscale('log')\n",
-    "axes[0].set_yscale('log')\n",
-    "\n",
-    "axes[1].hist(true_v, bins=np.logspace(-3, 3, 32));\n",
-    "axes[1].set_xscale('log')\n",
-    "axes[1].set_yscale('log')"
+    "true_r, true_v = np.load('rv.npy')"
    ]
   },
   {
@@ -213,15 +98,6 @@
     "\n",
     "v_err = np.full(n_data, 0.01)\n",
     "v = np.random.normal(true_v[:n_data], v_err)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rv_to_E(r, v, true_Mbh), r, v"
    ]
   },
   {
@@ -269,7 +145,7 @@
     "                 true_v=true_v[:n_data],\n",
     "                 N=n_data)\n",
     "\n",
-    "init_dict = [dict(Mbh=true_Mbh,\n",
+    "init_dict = [dict(Mbh=Mbh,\n",
     "#                   phi0=50000.,\n",
     "#                   gamma=true_gamma\n",
     "                 )\n",
@@ -279,7 +155,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "fit = sm.sampling(data=data_dict, algorithm='HMC', iter=32, init=init_dict, \n",
@@ -289,7 +167,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "with suppress_stdout_stderr():\n",
@@ -309,7 +189,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "plot_pars = ['Mbh']# 'gamma']\n",
@@ -355,7 +237,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
