--- a/notebooks/Simple stan.ipynb
+++ b/notebooks/Simple stan.ipynb
@@ -79,7 +79,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "true_r, true_v = np.load('rv.npy')[:,:n_data]"
@@ -126,7 +128,7 @@
     "def log_df(E, L, Mbh, gamma, beta):\n",
     "    g = gamma\n",
     "    \n",
-    "    num = -2*beta*np.log(L) + (g - beta-1.5) * np.log(E) + beta*np.log(2)\n",
+    "    num = -2*beta*np.log(L) + (g - beta - 1.5) * np.log(E) + beta*np.log(2)\n",
     "    den = 1.5*np.log(2*np.pi) + (g - 2*beta) * np.log(G*Mbh)\n",
     "    gams = loggamma(g - 2*beta + 1) - loggamma(g - beta - 0.5)\n",
     "\n",
@@ -142,7 +144,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from math import exp, log\n",
@@ -181,7 +185,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "from scipy.stats import norm"
+   ]
   },
   {
    "cell_type": "code",
@@ -189,13 +195,6 @@
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
     "class Model:\n",
@@ -289,10 +288,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "true_r[2], true_v[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "gs = np.linspace(0.5, 4.5, 64)\n",
     "lls = []\n",
     "for g in gs:\n",
-    "    lls.append(model.ln_likelihood(Mbh=4E6, gamma=g, beta=0.).sum())\n",
+    "    # lls.append(model.ln_likelihood(Mbh=4E6, gamma=g, beta=0.).sum())\n",
+    "    # lls.append(model.ln_likelihood(Mbh=4E6, gamma=g, beta=0.)[2])\n",
+    "    lls.append(model.ln_posterior(Mbh=4E6, gamma=g, beta=0.))\n",
     "    \n",
     "plt.plot(gs, lls)"
    ]
@@ -300,7 +310,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "n_walkers = 32\n",
@@ -318,7 +330,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for dim in range(sampler.chain.shape[-1]):\n",
@@ -348,7 +362,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "data_dict = dict(r=r, r_err=r_err,\n",
@@ -360,6 +376,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -422,7 +439,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "_ = fit.traceplot('Mbh')"
@@ -431,7 +450,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "plot_pars = ['Mbh']# 'gamma']\n",
@@ -477,7 +498,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
