--- a/notebooks/Simple stan.ipynb
+++ b/notebooks/Simple stan.ipynb
@@ -69,7 +69,7 @@
    },
    "outputs": [],
    "source": [
-    "n_data = 64\n",
+    "n_data = 128\n",
     "Mbh = 4E6\n",
     "gamma = 3.5\n",
     "a = 2. # mpc\n",
@@ -170,17 +170,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(6,6))\n",
-    "plt.loglog(rs, dens)\n",
-    "plt.loglog(rs, rs**-3.5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -212,7 +201,7 @@
     "        \n",
     "        self.r = r\n",
     "        self.v = v\n",
-    "        self._jac =  2*np.log(self.r) + 2*np.log(self.v)\n",
+    "        self._jac = 2*np.log(self.r) + 2*np.log(self.v)\n",
     "        \n",
     "    def pack(self, **kwargs):\n",
     "        vec = [kwargs.get(name, self.frozen.get(name)) \n",
@@ -239,7 +228,7 @@
     "        \n",
     "        val = log_df(E, L, pars['Mbh'], pars['gamma'], pars['beta'])\n",
     "        \n",
-    "#         jac = 2*np.log(self.r) + 2*log(true_v[n]);\n",
+    "        # jac = 2*np.log(self.r) + 2*log(true_v[n]);\n",
     "        jac = self._jac # HACK\n",
     "        \n",
     "        val += jac \n",
@@ -302,9 +291,13 @@
     "for g in gs:\n",
     "    # lls.append(model.ln_likelihood(Mbh=4E6, gamma=g, beta=0.).sum())\n",
     "    # lls.append(model.ln_likelihood(Mbh=4E6, gamma=g, beta=0.)[2])\n",
-    "    lls.append(model.ln_posterior(Mbh=4E6, gamma=g, beta=0.))\n",
+    "    lls.append(model.ln_posterior(Mbh=Mbh, gamma=g, beta=0.))\n",
+    "\n",
+    "lls = np.array(lls)\n",
     "    \n",
-    "plt.plot(gs, lls)"
+    "fig,axes = plt.subplots(1, 2, figsize=(12,5))\n",
+    "axes[0].plot(gs, lls)\n",
+    "axes[1].plot(gs, np.exp(lls - lls.max()))"
    ]
   },
   {
