--- a/notebooks/Generate r v.ipynb
+++ b/notebooks/Generate r v.ipynb
@@ -1,15 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Look at uncluster/Hernquist df\n",
-    "\n",
-    "Need to sample tracer positions to follow power-law, then sample velocities from conditional distribution."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -18,7 +9,9 @@
    "outputs": [],
    "source": [
     "import warnings\n",
+    "from math import log\n",
     "\n",
+    "import astropy.coordinates as coord\n",
     "from astropy.constants import G as _G\n",
     "import astropy.units as u\n",
     "import numpy as np\n",
@@ -27,8 +20,12 @@
     "%matplotlib inline\n",
     "from scipy.optimize import root\n",
     "import emcee\n",
+    "\n",
+    "import gala.potential as gp\n",
     "from gala.units import UnitSystem\n",
-    "from scipy.special import loggamma"
+    "from scipy.special import loggamma\n",
+    "\n",
+    "import starfish"
    ]
   },
   {
@@ -51,100 +48,26 @@
    },
    "outputs": [],
    "source": [
-    "def density(r, gamma, a, b):\n",
-    "    return a**gamma * r**-gamma\n",
-    "\n",
-    "def cdf(r, gamma, a, b):\n",
-    "    \"\"\"CDF corresponding to the power-law density profile of tracers\"\"\"\n",
-    "    gg = 3 - gamma\n",
-    "    A = (b**gg - a**gg)**-1\n",
-    "    return A * (r**gg - a**gg)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def sample_radii(cdf_func, size=1, a=0., b=np.inf, cdf_args=()):\n",
-    "    args = cdf_args + (a, b)\n",
-    "    def root_func(r, m):\n",
-    "        return m - cdf_func(float(r), *args)\n",
-    "    \n",
-    "    ms = np.random.uniform(0, 1, size=size)\n",
-    "    rs = []\n",
-    "    for m in ms:\n",
-    "        res = root(root_func, 1., args=(m,))\n",
-    "        rs.append(res.x[0])\n",
-    "        \n",
-    "    return np.array(rs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
     "n_data = 512\n",
     "Mbh = 4E6\n",
     "gamma = 3.5\n",
     "a = 2. # mpc\n",
-    "b = 1000. # mpc = 1 pc"
+    "b = 1000. # mpc = 1 pc\n",
+    "\n",
+    "# Maximum energy to consider is that of a circular orbit at r = 2 mpc\n",
+    "r_min = 2\n",
+    "\n",
+    "pot = gp.KeplerPotential(m=Mbh*units['mass'], units=units)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "r = sample_radii(cdf, size=10000, a=a, b=b, cdf_args=(gamma,))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "bins = np.logspace(-3, 3, 32)\n",
-    "H,_ = np.histogram(r, bins=bins)\n",
-    "\n",
-    "V = 4/3*np.pi*(bins[1:]**3 - bins[:-1]**3)\n",
-    "bin_cen = (bins[1:]+bins[:-1])/2.\n",
-    "\n",
-    "q = np.zeros((3,len(bin_cen)))\n",
-    "q[0] = bin_cen\n",
-    "\n",
-    "fig,ax = plt.subplots(1, 1, figsize=(7,7))\n",
-    "ax.plot(bin_cen, density(bin_cen, gamma, a, b), \n",
-    "         marker='', lw=2., ls='--')\n",
-    "\n",
-    "ax.loglog(bin_cen, H/V/r.size, marker='')\n",
-    "\n",
-    "ax.set_xlabel('$r$')\n",
-    "ax.set_ylabel('$n(r)$')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "from math import log\n",
+    "def density(r, gamma, a, b):\n",
+    "    return a**gamma * r**-gamma\n",
     "\n",
     "def potential(r, Mbh):\n",
     "    return G*Mbh / r\n",
@@ -162,7 +85,17 @@
     "    den = 1.5*log(2*np.pi) + (g - 2*beta) * log(G*Mbh)\n",
     "    gams = loggamma(g - 2*beta + 1) - loggamma(g - beta - 0.5)\n",
     "\n",
-    "    return (num - den + gams).real"
+    "    return (num - den + gams).real\n",
+    "\n",
+    "max_E = rv_to_E(r_min, v_c(r_min, Mbh), Mbh)\n",
+    "max_E"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Sample from the DF using MCMC"
    ]
   },
   {
@@ -173,47 +106,25 @@
    },
    "outputs": [],
    "source": [
-    "def ln_vel_dist(p, r, Mbh, gamma):\n",
-    "    # HACK: IGNORE ANISOTROPY FOR NOW\n",
-    "    L = 1.\n",
-    "    beta = 0.\n",
-    "    \n",
-    "    v = p[0]\n",
-    "    if v <= 0.:\n",
-    "        return -np.inf\n",
+    "def lnprob(p, Mbh, gamma):\n",
+    "    ln_r, ln_v = p\n",
+    "    r = np.exp(ln_r)\n",
+    "    v = np.exp(ln_v)\n",
     "    \n",
     "    E = rv_to_E(r, v, Mbh)\n",
-    "    if E < 0:\n",
+    "    \n",
+    "    if not 0 < E < max_E:\n",
     "        return -np.inf\n",
     "    \n",
-    "    return 2*log(v) + log_df(E, L, Mbh, gamma, beta)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "nwalkers = 32\n",
-    "v = np.zeros(n_data)\n",
-    "\n",
-    "with warnings.catch_warnings():\n",
-    "    warnings.filterwarnings('error')\n",
+    "    if ln_r < log(r_min):\n",
+    "        return -np.inf\n",
     "    \n",
-    "    for i in range(n_data):\n",
-    "        p0 = np.abs(np.random.normal(1E-1, 1E-3, (nwalkers,1)))\n",
-    "        sampler = emcee.EnsembleSampler(nwalkers=nwalkers, dim=1, \n",
-    "                                        lnpostfn=ln_vel_dist, args=(r[i], Mbh, gamma))\n",
-    "        \n",
-    "        try:\n",
-    "            _ = sampler.run_mcmc(p0, 256)\n",
-    "        except Warning:\n",
-    "            print(\"Failed!\", i)\n",
-    "            break\n",
-    "        v[i] = sampler.chain[0,-1,0]"
+    "    df_ = log_df(E, 1., Mbh, gamma, 0.) # HACK: isotropic\n",
+    "    \n",
+    "    if not np.isfinite(df_):\n",
+    "        return -np.inf\n",
+    "    \n",
+    "    return df_ + 2*ln_r + 2*ln_v + ln_r + ln_v"
    ]
   },
   {
@@ -224,8 +135,10 @@
    },
    "outputs": [],
    "source": [
-    "# for walker in sampler.chain[...,0]:\n",
-    "#     plt.plot(walker, marker='', drawstyle='steps', alpha=0.1)"
+    "p0 = np.zeros((32, 2))\n",
+    "p0[:,0] = np.random.normal(5., 0.1, size=p0.shape[0])\n",
+    "p0[:,1] = v_c(p0[:,0], Mbh)\n",
+    "p0 = np.log(p0)"
    ]
   },
   {
@@ -236,8 +149,8 @@
    },
    "outputs": [],
    "source": [
-    "# S2 (star in GC) has this velocity-ish\n",
-    "((2*np.pi*980*u.au) / (15*u.yr)).to(u.mpc/u.yr)"
+    "sampler = emcee.EnsembleSampler(nwalkers=p0.shape[0], dim=2, \n",
+    "                                lnpostfn=lnprob, args=(Mbh, gamma))"
    ]
   },
   {
@@ -248,8 +161,240 @@
    },
    "outputs": [],
    "source": [
-    "np.save('rv.npy', np.vstack((r[:n_data],v)))"
+    "_ = sampler.run_mcmc(p0, 16384)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for dim in range(p0.shape[1]):\n",
+    "    plt.figure()\n",
+    "    for walker in sampler.chain[...,dim]:\n",
+    "        plt.plot(walker, marker='', drawstyle='steps-mid', alpha=0.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "flatchain = np.vstack(sampler.chain[:,500::8])\n",
+    "r_samples, v_samples = np.exp(flatchain.T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bins = np.logspace(-1, 3, 64)\n",
+    "bin_ctr = (bins[:-1] + bins[1:]) / 2.\n",
+    "V = 4*np.pi*bin_ctr**2 * (bins[1:] - bins[:-1])\n",
+    "\n",
+    "H,_ = np.histogram(r_samples, bins)\n",
+    "\n",
+    "plt.plot(bin_ctr, H/V)\n",
+    "plt.plot(bin_ctr, density(bin_ctr, gamma, r_min, bin_ctr.max()))\n",
+    "plt.plot(bin_ctr, bin_ctr**-1.2)\n",
+    "\n",
+    "plt.xscale('log')\n",
+    "plt.yscale('log')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.hist(v_samples, bins='auto');\n",
+    "plt.xlabel('$v$')## Now get 3D coordinates assuming isotropy:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Now get 3D coordinates assuming isotropy:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import gala.integrate as gi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# further downsample:\n",
+    "r_subset = r_samples[::64]\n",
+    "v_subset = v_samples[::64]\n",
+    "\n",
+    "w0 = starfish.rv_to_3d_isotropic(r_subset*units['length'], \n",
+    "                                 v_subset*units['speed'])\n",
+    "\n",
+    "orbit = pot.integrate_orbit(w0, dt=1E-2, n_steps=10000,\n",
+    "                            Integrator=gi.DOPRI853Integrator)\n",
+    "w = orbit[-1].represent_as(coord.PhysicsSphericalRepresentation)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_ = orbit[:,1].plot()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Compare initial and final density profile:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "Hi,_ = np.histogram(r_subset, bins)\n",
+    "Hf,_ = np.histogram(w.r.value, bins)\n",
+    "\n",
+    "plt.plot(bin_ctr, density(bin_ctr, gamma, r_min, bin_ctr.max()))\n",
+    "plt.plot(bin_ctr, Hi/V, marker='', linestyle='--')\n",
+    "plt.plot(bin_ctr, Hf/V, marker='', linestyle='--')\n",
+    "\n",
+    "plt.xscale('log')\n",
+    "plt.yscale('log')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "np.save('rv.npy', np.vstack((r_samples, v_samples)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## Test emcee sample gamma"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def log_df_arr(E, L, Mbh, gamma, beta):\n",
+    "    g = gamma\n",
+    "    \n",
+    "    num = -2*beta*np.log(L) + (g - beta - 1.5) * np.log(E) + beta*np.log(2)\n",
+    "    den = 1.5*np.log(2*np.pi) + (g - 2*beta) * np.log(G*Mbh)\n",
+    "    gams = loggamma(g - 2*beta + 1) - loggamma(g - beta - 0.5)\n",
+    "\n",
+    "    return (num - den + gams).real\n",
+    "\n",
+    "def lnprob_gamma(p, Mbh, r, v):\n",
+    "    gamma = p[0]\n",
+    "    \n",
+    "    E = rv_to_E(r, v, Mbh)\n",
+    "    \n",
+    "    if not 0.5 < gamma < 5.:\n",
+    "        return -np.inf\n",
+    "    \n",
+    "    df_ = log_df_arr(E, 1., Mbh, gamma, 0.) # HACK: isotropic\n",
+    "    \n",
+    "    if not np.all(np.isfinite(df_)):\n",
+    "        return -np.inf\n",
+    "    \n",
+    "    return np.sum(df_ + 2*np.log(r) + 2*np.log(v))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "p0 = np.zeros((32, 1))\n",
+    "p0[:,0] = np.random.normal(gamma, 0.1, size=p0.shape[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "sampler = emcee.EnsembleSampler(nwalkers=p0.shape[0], dim=p0.shape[1], \n",
+    "                                lnpostfn=lnprob_gamma, args=(Mbh, r_samples[:64], v_samples[:64]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_ = sampler.run_mcmc(p0, 1024)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for dim in range(p0.shape[1]):\n",
+    "    plt.figure()\n",
+    "    for walker in sampler.chain[...,dim]:\n",
+    "        plt.plot(walker, marker='', drawstyle='steps-mid', alpha=0.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -263,9 +408,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python [conda env:starfish]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-starfish-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -277,7 +422,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
