--- a/notebooks/Hernquist demo.ipynb
+++ b/notebooks/Hernquist demo.ipynb
@@ -9,15 +9,19 @@
    "outputs": [],
    "source": [
     "from math import log, pi\n",
+    "import astropy.coordinates as coord\n",
     "from astropy.constants import G as _G\n",
     "import astropy.units as u\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "plt.style.use('apw-notebook')\n",
     "%matplotlib inline\n",
+    "import emcee\n",
     "\n",
     "from gala.units import UnitSystem\n",
-    "import gala.potential as gp"
+    "import gala.potential as gp\n",
+    "\n",
+    "import starfish"
    ]
   },
   {
@@ -34,7 +38,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "G = units.decompose(_G).value"
@@ -69,6 +75,9 @@
     "def r_max(E, M, a):\n",
     "    return G*M/E - a\n",
     "\n",
+    "def rv_to_E(r, v, M, a):\n",
+    "    return G*M/(r+a) - 0.5*v**2\n",
+    "\n",
     "def sample_r(a, r_min=0, r_max=1E20, size=1):\n",
     "    uu = np.random.uniform(M_enc(r_min, 1., a), \n",
     "                           M_enc(r_max, 1., a),\n",
@@ -80,35 +89,6 @@
     "    # r_p = a*np.sqrt(uu) / (1 + np.sqrt(uu))\n",
     "    \n",
     "    return r_m"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# r = sample_r(a, r_min=r_min, r_max=r_max(E, M, a), size=E.size)\n",
-    "r = sample_r(a, r_min=r_min, size=10000)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bins = np.logspace(-2, 2.5, 64)\n",
-    "bin_ctr = (bins[:-1] + bins[1:]) / 2.\n",
-    "V = 4*np.pi*bin_ctr**2 * (bins[1:] - bins[:-1])\n",
-    "\n",
-    "H,_ = np.histogram(r, bins)\n",
-    "\n",
-    "plt.plot(bin_ctr, H/V)\n",
-    "plt.plot(bin_ctr, [pot.density([x,0,0.]).value[0] for x in bin_ctr])\n",
-    "\n",
-    "plt.xscale('log')\n",
-    "plt.yscale('log')"
    ]
   },
   {
@@ -130,20 +110,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "E = np.linspace(0, 1, 1024) * (G*M/a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "E = np.linspace(0, 1, 1024) * (G*M/a)\n",
+    "\n",
     "fig,ax = plt.subplots(1, 1, figsize=(6,5))\n",
     "ax.set_xlim(0, 1.5)\n",
     "\n",
@@ -156,12 +127,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "log_df(E, M, a)"
+    "# Sample from the DF using MCMC"
    ]
   },
   {
@@ -182,7 +151,12 @@
     "    if not 0 < E < max_E:\n",
     "        return -np.inf\n",
     "    \n",
-    "    return log_df(E, M, a) + 2*ln_r + 2*ln_v + ln_r + ln_v"
+    "    df_ = log_df(E, M, a)\n",
+    "    \n",
+    "    if not np.isfinite(df_):\n",
+    "        return -np.inf\n",
+    "    \n",
+    "    return df_ + 2*ln_r + 2*ln_v + ln_r + ln_v"
    ]
   },
   {
@@ -191,15 +165,6 @@
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": [
-    "import emcee"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
     "p0 = np.zeros((32, 2))\n",
@@ -211,7 +176,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sampler = emcee.EnsembleSampler(nwalkers=p0.shape[0], dim=2, \n",
@@ -224,7 +191,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "_ = sampler.run_mcmc(p0, 8000)"
+    "_ = sampler.run_mcmc(p0, 16384)"
    ]
   },
   {
@@ -242,10 +209,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "flatchain = np.vstack(sampler.chain[:,200::16])\n",
+    "flatchain = np.vstack(sampler.chain[:,200::8])\n",
     "r_samples, v_samples = np.exp(flatchain.T)"
    ]
   },
@@ -271,29 +240,29 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "E_samples = rv_to_E(r_samples, v_samples, M, a)\n",
+    "plt.hist(E_samples, bins='auto');\n",
+    "plt.xlabel(r'$\\mathcal{E}$')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.hist(v_samples, bins='auto');\n",
+    "plt.xlabel('$v$')"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Now we numerically compute the cumulative DF so we can to inverse transform sampling"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "from scipy.integrate import quad\n",
-    "from scipy.interpolate import InterpolatedUnivariateSpline"
+    "## Now get 3D coordinates assuming isotropy:"
    ]
   },
   {
@@ -302,68 +271,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "E_grid = np.linspace(0, max_E, 128)[1:]\n",
-    "nodes = [list(quad(lambda E: np.exp(log_df(E, M, a)), a=0, b=x)) \n",
-    "         for x in E_grid]\n",
-    "nodes = np.array(nodes)[:,0]\n",
-    "nodes /= nodes.max()\n",
+    "# further downsample:\n",
+    "r_subset = r_samples[::32]\n",
+    "v_subset = v_samples[::32]\n",
     "\n",
-    "interp = InterpolatedUnivariateSpline(nodes, E_grid, k=3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "E = interp(np.random.uniform(size=10000))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.hist(E / (G*M/a));"
+    "w0 = starfish.rv_to_3d_isotropic(r_subset*units['length'], \n",
+    "                                 v_subset*units['speed'])\n",
+    "\n",
+    "w = pot.integrate_orbit(w0, dt=0.1, n_steps=4000)\n",
+    "w = w[-1].represent_as(coord.PhysicsSphericalRepresentation)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now sample radii between $r_{\\rm min}$ and $r_{\\rm max}(\\mathcal{E})$:"
+    "Compare initial and final density profile:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "source": [
+    "Hi,_ = np.histogram(r_subset, bins)\n",
+    "Hf,_ = np.histogram(w.r.value, bins)\n",
+    "\n",
+    "plt.plot(bin_ctr, [pot.density([x,0,0.]).value[0] for x in bin_ctr], marker='')\n",
+    "plt.plot(bin_ctr, Hi/V, marker='', linestyle='--')\n",
+    "plt.plot(bin_ctr, Hf/V, marker='', linestyle='--')\n",
+    "\n",
+    "plt.xscale('log')\n",
+    "plt.yscale('log')"
+   ]
   },
   {
    "cell_type": "code",
@@ -386,9 +327,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python [conda env:starfish]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-starfish-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -400,7 +341,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
